<resources>
    <string name="app_name">Yuri</string>



    <string name="back">Back</string>
    <!--权限-->
    <string name="permissions_settings">设置</string>
    <string name="permissions_help">帮助</string>
    <string name="permissions_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="permissions_quit">退出</string>



    <string name="user">用户</string>
    <string name="edu">教育</string>
    <string name="travel">出行</string>
    <string name="strategy">攻略</string>
    <string name="translate">翻译</string>
    <string name="ignore"><![CDATA[跳过 >]]></string>

    <string name="miscor_primarykey">c96c2a771c6e4548a24e269884889478 </string>
    <string name="regist">注册</string>
    <string name="login_user_tips">请输入账号</string>
    <string name="regist_user_tips">请输入手机号码注册</string>
    <string name="login_pwd_tips">请输入密码</string>
    <string name="regist_pwd_tips">请输入登录密码</string>
    <string name="regist_code_tips">请输入验证码</string>
    <string name="login">登录</string>
    <string name="code_login">验证码登录</string>
    <string name="pwd_forget">忘记密码</string>
    <string name="pwd_login">密码登录</string>
    <string name="tips_input_sure_number">请输入正确手机号</string>
    <string name="tips_code_send_success">验证码发送成功</string>
    <string name="tips_intput_username">请输入用户名</string>
    <string name="tips_input_code">验证码</string>
    <string name="record_fail">录音失败</string>
    <string name="no_network">请连接网络</string>
    <string name="dev_tran">设备翻译</string>
    <string name="chat">双人对话</string>
    <string name="voice_tran">语音翻译</string>
    <string name="tran_mathine">翻译</string>
    <string name="open_connect_blue">请打开蓝牙并连接设备</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="detect_dev_open">请检查设备是否开启</string>
    <string name="open_dev_near_mobile">开启后请将设备靠近手机</string>
    <string name="dev_bind">设备绑定</string>
    <string name="connect_dev">请连接设备</string>
    <string name="dev_isrecoder">录音中</string>
    <string name="user_info">个人信息</string>
    <string name="my_head_img">我的头像</string>
    <string name="user_name">用户名</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="hight">身高</string>
    <string name="weight">体重</string>
    <string name="mobile_number">手机号</string>
    <string name="mail">邮箱</string>
    <string name="wechat">微信</string>
    <string name="sex_male">男</string>
    <string name="my_dev">我的设备</string>
    <string name="question">常见问题</string>
    <string name="click_edit_head">点击编辑头像</string>
    <string name="blue_close">蓝牙未打开</string>
    <string name="photo_tran">拍照翻译</string>
    <string name="tips_input_username">请输入手机号</string>
    <string name="tips_input_pwd">请输入密码</string>
    <string name="input_six_pwd">请输入6位密码</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="auto">自动</string>
    <string name="tips_code_error">验证码错误</string>
    <string name="label_china">中文[CHS]</string>
    <string name="label_english">英语[ENG]</string>
    <string name="label_fra">法语[FRA]</string>
    <string name="label_deu">德语[DEU]</string>
    <string name="label_kor">韩语[KOR]</string>
    <string name="label_jpn">日语[JPN]</string>
    <string name="label_spa">西班牙语[SPA]</string>
    <string name="lael_por">葡萄牙语[POR]</string>
    <string name="label_rus">俄罗斯语[RUS]</string>
    <string name="pair_success">配对成功</string>
    <string name="pair_fail">配对失败</string>
    <string name="pairing">配对中...</string>
    <string name="unconnect_dev">未连接设备</string>
    <string name="next">下一步</string>
    <string name="ed_tips_input_username">请输入已注册的账号</string>
    <string name="get_code">获取验证码</string>
    <string name="else_login">第三方登录</string>
    <string name="re_photo">重新拍照</string>
    <string name="tran_all">全部翻译</string>
    <string name="part_tran">区域翻译</string>
    <string name="blue_con">蓝牙未连接</string>
    <string name="open_blue_con_dev">请在设置中打开蓝牙并连接配件</string>
    <string name="language_select">语言选择</string>
    <string name="user_alread_regist">用户已注册</string>
    <string name="regist_success">注册成功</string>
    <string name="text_agin_get">重新获取</string>
    <string name="request_error">请求错误</string>
    <string name="login_success">登陆成功</string>
    <string name="tran_error">翻译失败</string>
    <string name="input_letter_or_sen">在此输入单词或句子</string>

    <string name="china_text">中文</string>
    <string name="eng_text">英语</string>
    <string name="deu_text">德语</string>
    <string name="fra_text">法语</string>
    <string name="kor_text">韩语</string>
    <string name="jpa_text">日语</string>
    <string name="spa_text">西班牙语</string>
    <string name="por_text">葡萄牙语</string>
    <string name="rus_text">俄罗斯语</string>
    <string name="press_and_voice">请按语音按钮进行语音输入</string>
    <string name="input_name">请输入已注册的账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="blue_uncon">蓝牙未连接</string>
    <string name="blue_iscon">蓝牙已连接</string>

    <string name="device_language">设备语言</string>
    <string name="mobile_language">手机语言</string>
    <string name="add_label">添加标签</string>
    <string name="you_mother_language">您的母语是</string>
    <string name="recognition_failed">识别失败</string>
    <string name="translating">翻译中</string>


</resources>
