<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x130"
        android:background="@drawable/dialog_btopen_bg"
        android:gravity="center_horizontal|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x70"
            android:gravity="center">

            <TextView
                android:id="@+id/dialog_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x20"
                android:layout_marginTop="@dimen/x20"

                android:text="@string/open_blue_con_dev" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_grey_400_color_code" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x60"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/md_grey_400_color_code" />

            <TextView
                android:id="@+id/dialog_sure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="@color/main_title_color"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
