<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:background="@color/main_title_color">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/devbind_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/x5"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:text="@string/ignore"/>
           <!-- <ImageView
                android:id="@+id/devbind_ignore_img"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/x5"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/right_row"/>-->
            <TextView
                android:id="@+id/main_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/dev_bind"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_above="@+id/v_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@drawable/bind_img"/>
                </RelativeLayout>
            </LinearLayout>
            <View
                android:id="@+id/v_center"
                android:layout_width="1px"
                android:layout_centerInParent="true"
                android:layout_height="1px"/>
            <TextView
                android:layout_below="@id/v_center"
                android:layout_centerInParent="true"
                android:layout_margin="@dimen/x10"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:textColor="#686868"
                android:text="@string/detect_dev_open"/>
            <TextView
                android:layout_below="@id/v_center"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/x38"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/open_dev_near_mobile"/>

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x65"
            android:gravity="center">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/x10">
                <ImageView
                    android:id="@+id/img_devbind_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/dev_bind_btn_bg"/>
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="19sp"
                    android:text="@string/next"/>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>