<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.wtwd.translate.MainActivity">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </FrameLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="@color/md_grey_100_color_code"
        android:orientation="horizontal"
        android:layout_height="@dimen/x45">
        <LinearLayout
            android:id="@+id/nav_tran"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/x5"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/nav_tran_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_translate_btn"
                />
            <TextView
                android:id="@+id/nav_tran_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/translate"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/nav_strategy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center|bottom"
            android:layout_marginBottom="@dimen/x5">
            <ImageView
                android:id="@+id/nav_strategy_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_strategy_btn"
                />
            <TextView
                android:id="@+id/nav_strategy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/strategy"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nav_travel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/x5"
            android:gravity="center|bottom">
            <ImageView
                android:id="@+id/nav_travel_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_travel_btn"
                />
            <TextView
                android:id="@+id/nav_travel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/travel"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nav_edu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/x5"
            android:gravity="center|bottom">
            <ImageView
                android:id="@+id/nav_edu_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_edu_btn"
                />
            <TextView
                android:id="@+id/nav_edu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/edu"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/nav_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/x5"
            android:gravity="center|bottom">
            <ImageView
                android:id="@+id/nav_user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_user_btn"
                />
            <TextView
                android:id="@+id/nav_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:text="@string/user"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
