<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/main_title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:background="@color/main_title_color"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textColor="@color/color_white"
                android:text="@string/login"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/main_title"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/x20"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x80"
            android:layout_centerVertical="true"
            android:src="@drawable/logo"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:layout_marginBottom="@dimen/x10"
                android:padding="@dimen/x5"
                android:background="@drawable/login_edittext_background"
                android:gravity="center">
                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_user"
                    />
                <EditText
                    android:id="@+id/ed_username"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:paddingLeft="@dimen/x5"
                    android:textSize="14sp"
                    android:hint="@string/ed_tips_input_username"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_clear"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/x40"
                android:layout_marginBottom="@dimen/x10"
                android:background="@drawable/login_edittext_background"
                android:padding="@dimen/x5"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/regist_code"
                    />
                <EditText
                    android:id="@+id/ed_code"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:paddingLeft="5dp"
                    android:hint="@string/regist_code_tips"
                    android:textSize="14sp"
                    />
                <RelativeLayout
                    android:layout_width="@dimen/x80"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/regist_code_btn"
                        android:layout_marginRight="@dimen/x5"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:id="@+id/tv_getcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_title_color"
                        android:layout_marginRight="@dimen/x5"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:text="@string/get_code"/>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/login_forget_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pwd_forget"/>
                    <TextView
                        android:id="@+id/login_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/pwd_login"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/login_forget_pwd">

                        <RelativeLayout
                            android:layout_width="@dimen/x120"
                            android:layout_height="@dimen/x60">
                            <ImageView
                                android:id="@+id/img_login"
                                android:layout_width="@dimen/x120"
                                android:layout_height="@dimen/x50"
                                android:src="@drawable/btn_bg_login"
                                android:layout_alignParentLeft="true"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="@dimen/x10"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:textColor="@color/color_white"
                                android:text="@string/login"/>
                        </RelativeLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/lin_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/login_pwd">

                        <RelativeLayout
                            android:layout_width="@dimen/x120"
                            android:layout_height="@dimen/x60">

                            <ImageView
                                android:id="@+id/img_regist"
                                android:layout_width="@dimen/x120"
                                android:layout_height="@dimen/x50"
                                android:layout_alignParentRight="true"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="@dimen/x10"
                                android:src="@drawable/login_registbtn"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/regist"
                                android:textColor="@color/main_title_color"
                                />
                        </RelativeLayout>

                    </LinearLayout>
                  <!--  <ImageView
                        android:id="@+id/img_regist"
                        android:layout_below="@+id/login_pwd"
                        android:layout_width="@dimen/x120"
                        android:layout_height="@dimen/x50"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/x10"
                        android:src="@drawable/login_registbtn"/>-->

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_above="@+id/linear_login_else"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x30"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_left_line"
            />
        <TextView
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main_title_color"
            android:text="@string/else_login"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_right_line"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_login_else"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/x50"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/img_wechat_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/img_sina_login"
                android:src="@drawable/wechat_login"/>
            <ImageView
                android:id="@+id/img_sina_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/x50"
                android:layout_marginRight="@dimen/x50"
                android:src="@drawable/sina_login"/>
            <ImageView
                android:id="@+id/img_qq_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_sina_login"
                android:src="@drawable/qqlogin"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>